# ring-vrf

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Specification.toml  specification_template.md
.github/workflows/: rust.yml
ark-scale/: Cargo.toml  README.md
ark-scale/src/: lib.rs
ark-secret-scalar/: Cargo.toml  README.md
ark-secret-scalar/src/: lib.rs
ark-transcript/: Cargo.toml  README.md
ark-transcript/src/: debug.rs  lib.rs  tests.rs
ark_transcript/: Cargo.toml  README.md
ark_transcript/src/: lib.rs  tests.rs
bandersnatch_vrfs/: Cargo.toml  README.md  zcash-9.pk  zcash-9.vk
bandersnatch_vrfs/src/: affine.rs  lib.rs  ring.rs  zcash_consts.rs
dleq_vrf/: Cargo.toml  README.md
dleq_vrf/src/: error.rs  flavor.rs  keys.rs  lib.rs  pedersen.rs  scale.rs  tests.rs  thin.rs  traits.rs  transcript.rs  vrf.rs
dleq_vrf/src/transcript/: blake3.rs  inc_io.rs  merlin.rs  mod.rs
ec_vrf/src/: lib.rs
nugget_bls/: Cargo.toml  README.md
nugget_bls/any_tools/: Cargo.toml  README.md
nugget_bls/any_tools/src/: lib-1.rs  lib.rs
nugget_bls/src/: bls12_381.rs  inc_bls12.rs  lib.rs  scale.rs  tests.rs
old_zcash/src/: context.rs  dleq.rs
papers/: .gitignore  anoncred.bib  climate.bib  commit.bib  identity.bib  refs_misc.bib  refs_new.bib  ringsignatures.bib  sassafras.bib  vrf.bib  vrf_issues.tex.wrong  zkp.bib
papers/macros/: environments.tex  other.tex  primitives.tex  removed.tex  style.tex
papers/ring_vrf/: Jeff_SpecialG.tex  NIZK_for_R.tex  _links_  abstract-long.tex  abstract-short.tex  abstract.tex  acm-ccs.bbl  acm-ccs.tex  acmart.tex  app_games.tex  app_id.tex  app_rate.tex  app_short.tex  appendix_SpeciaG_instantiation.tex  background.tex  conclusion.tex  crypto.bbl  crypto.tex  games.tex  h2j.sh-sed  identity.bib  identity.tex  intro.tex  intro_conf.tex  intro_crypto_conf.tex  macros.tex  main.tex  more_uc_funcs.tex  nizkR_security.tex  notation.tex  overview.tex  pedersen_vrf.tex  pets.bbl  pets.tex  popets.sty  primitives.tex  r1_r2.tex  refs_misc.bib  refs_new.bib  refs_sass.bib  (+30 more)
papers/ring_vrf-oops/: conclusion.tex  identity.tex  main.tex  ring_vrf.bbl  ring_vrf.tex  rvrf_def.tex  rvrf_uc_fun.tex  vrf_def.tex  zk_cont.tex
papers/ring_vrf-oops/trash/uc/: rvrf_functionality.tex
papers/ring_vrf-oops/uc/: handan-packages.tex  relation_btw_game_uc.tex  rvrf_functionality.tex  security_proof.tex
papers/ring_vrf/abstracts/: long-old.tex  medium.tex  short.tex
papers/ring_vrf/appendix_variations/: jubjub.tex
papers/ring_vrf/background/: extra.tex  fat.tex  thin.tex
papers/ring_vrf/macros/: ._other.tex  ._primitives.tex  ._style.tex  burdges.sty  other.tex  primitives.tex  style.tex
papers/ring_vrf/trash/uc/: rvrf_se.tex  rvrf_sign.tex
papers/ring_vrf/uc/: ._model.tex  ._rvrf.tex  ._rvrf_functionality.tex  ._rvrf_se.tex  ._rvrf_se_functionality.tex  545c6e0bf53de4e44a28e04975721f631d7f3a7a-revisiting-rvrf.patch  handan-commands.tex  model.tex  rvrf.tex  rvrf_functionality.tex  rvrf_functionality_oana.tex  rvrf_se_functionality.tex  security_proof.tex  uc.tex  uc_security.tex
papers/ring_vrf/unused/: abstract_old.tex
papers/thin_vrf/: games.tex  intro.tex  llncsdoc.sty  protocol.tex  thin_vrf.tex
sassafras/: todo.txt
sassafras/src/: claim.rs  config.rs  tickets.rs
spec/: specification.md  specification.tex
src/: bls12_381.rs  circuit.rs  context.rs  copath.rs  generator.rs  insertion.rs  keys.rs  lib.rs  merkle.rs  misc.rs  prover.rs  scalar.rs  schnorr.rs  schnorr_junk.rs  verifier.rs  vrf.rs
src/poseidon/: bn256.rs  group_hash.rs  mod.rs
talks/: .gitignore  zksummit.tex
talks/parasummit/: parasummit.tex
talks/zksummit/: abstract.md  zksummit.tex
vrf-ad-kc/: Cargo.toml
vrf-ad-kc/src/: error.rs  flavor.rs  keys.rs  lib.rs  pedersen.rs  thin.rs  vrf.rs
vrf-ad-kc/src/transcript/: blake3.rs  inc_io.rs  merlin.rs  mod.rs
zexe/: Cargo.toml
zexe/src/: main.rs
