[package]
name = "ring-vrf"
version = "0.0.1"
description = "Ring VRF implementation using zkSNARKs."
authors = ["Sergey Vasilyev <swasilyev@gmail.com>", "Jeff Burdges <jeff@web3.foundation>", "Wei Tang <hi@that.world>"]
edition = "2018"
license = "MIT"

[dependencies]
ff = { git = "https://github.com/zcash/librustzcash" }
group = { git = "https://github.com/zcash/librustzcash" }
pairing = { git = "https://github.com/zcash/librustzcash" }
bellman = { git = "https://github.com/zcash/librustzcash" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash" }
bench-utils = { git = "https://github.com/scipr-lab/zexe", features = ["print-trace"]}

[dependencies.arrayref]
version = "0.3.5"
default-features = false

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[dependencies.digest] 
version = "0.8"
default-features = false

# [dependencies.subtle]
# version = "2.2.1"
# default-features = false

[dependencies.merlin] 
version = "2.0"
# features = ["debug-transcript"]
default-features = false

[dependencies.rand_core]
version = "0.5.1"
# default-features = false

[dependencies.rand_chacha]
version = "0.2" # ?
default-features = false
optional = true

[dependencies.lazy_static]
version = "1.4"
default-features = false

[dependencies.zeroize]
version = "1.0.0"
default-features = false
features = ["zeroize_derive"]

[dev-dependencies]
rand_xorshift = "0.2"
rand_chacha = "0.2"

[features]
default = ["rand_chacha"] # "std", 


