[workspace.package]
repository = "https://github.com/w3f/ring-vrf/"


[workspace]
resolver = "2"
members = [
    "ark-secret-scalar",
    "ark-transcript",
    "dleq_vrf",
    "nugget_bls",
    "bandersnatch_vrfs",
]
# "web3sum_ring_vrf",

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]

rand_core = { version = "0.6", default-features = false }
getrandom_or_panic = { version = "0.0.3", default-features = false }
digest = { version = "0.10", default-features = false }
# sha2 = { version = "0.10", default-features = false }
# sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1.0", default-features = false, features = [ "zeroize_derive" ] }

ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = [ "derive" ] }
# ark-serialize-derive = { version = "0.4", default-features = false }
ark-scale = { version = "0.0.12", default-features = false, features = ["ec"] }
