[package]
name = "dleq_vrf"
description = "VRFs from Chaum-Pedersen DLEQ proofs, usable in Ring VRFs"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>", "Jeff Burdges <jeff@web3.foundation>", "Syed Hosseini <syed@riseup.net>"]
version = "0.0.1"
repository = "https://github.com/w3f/ring-vrf/tree/master/dleq_vrf"
edition = "2021"
license = "MIT/Apache-2.0"


[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
arrayref = { version = "0.3", default-features = false }
# rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = [ "derive" ] }
ark-serialize-derive = { version = "0.4", default-features = false }
ark-transcript = { version = "0.0.1", default-features = false, path = "../ark-transcript" }

zeroize = { version = "1.0", default-features = false, features = [ "zeroize_derive" ] }


[dev-dependencies]
ark-bls12-377 = { version = "0.4", default-features = false, features = [ "curve" ] }
# ark-bls12-381 = { version = "0.4", default-features = false, features = [ "curve" ] }


[features]
default = ["getrandom"] # "std", "rand"
getrandom = ["rand_core/getrandom"] #  "ark_transcript/getrandom"



