[package]
name = "dleq_vrf"
description = "VRFs from Chaum-Pedersen DLEQ proofs, usable in Ring VRFs"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>", "Jeff Burdges <jeff@web3.foundation>", "Syed Hosseini <syed@riseup.net>"]
version = "0.0.2"
repository = "https://github.com/w3f/ring-vrf/tree/master/dleq_vrf"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["crypto", "cryptography", "vrf", "signature", "proof", "zkp", "privacy"]


[dependencies]
# arrayref = { version = "0.3", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }

zeroize.workspace = true

ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true

ark-secret-scalar = { version = "0.0.2", default-features = false, path = "../ark-secret-scalar" }
ark-transcript = { version = "0.0.2", default-features = false, path = "../ark-transcript" }

ark-scale = { workspace = true, optional = true }


[dev-dependencies]
sha2 = { version = "0.10", default-features = false }

ark-bls12-377 = { version = "0.4", default-features = false, features = [ "curve" ] }
# ark-bls12-381 = { version = "0.4", default-features = false, features = [ "curve" ] }


[features]
default = ["getrandom"]  #  "std", "rand"
std = ["ark-secret-scalar/std"] # "rand_core/std"
getrandom = ["ark-secret-scalar/getrandom"]  #  "ark_transcript/getrandom", "rand_core/getrandom", "getrandom_or_panic/getrandom"
scale = ["dep:ark-scale"]

