[package]
name = "nugget_bls"
description = "VRFs from Chaum-Pedersen DLEQ proofs, usable in Ring VRFs"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>", "Jeff Burdges <jeff@web3.foundation>", "Syed Hosseini <syed@riseup.net>"]
version = "0.0.2"
repository = "https://github.com/w3f/ring-vrf/tree/master/nugget_bls"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["crypto", "cryptography", "bls", "signature"]


[dependencies]
dleq_vrf = { version = "0.0.2", default-features = false, path = "../dleq_vrf" }

rand_core.workspace = true
# zeroize.workspace = true

ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true

ark-bls12-377 = { version = "0.4", default-features = false, features = [ "curve" ], optional = true }
ark-bls12-381 = { version = "0.4", default-features = false, features = [ "curve" ], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }


[dev-dependencies]


[features]
default = ["getrandom", "bls12_381", "bls12_377"] # "std", "rand"
bls12_377 = ["dep:ark-bls12-377"]
bls12_381 = ["dep:ark-bls12-381", "dep:sha2"]
getrandom = ["dleq_vrf/getrandom"]
