[package]
name = "zexe"
version = "0.1.0"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
groth16 = { git = "https://github.com/scipr-lab/zexe" }
algebra = { git = "https://github.com/scipr-lab/zexe", features = [ "bls12_381", "jubjub" ] }
algebra-core = { git = "https://github.com/scipr-lab/zexe" }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe" }
r1cs-core = { git = "https://github.com/scipr-lab/zexe" }
r1cs-std = { git = "https://github.com/scipr-lab/zexe", features = [ "jubjub" ] }
